--- a/Project1/style.css
+++ b/Project1/style.css
@@ -62,17 +62,20 @@ p {
 
 table { 
 	border-collapse: collapse;
+	table-layout: fixed;
+	width: 100%;
 }
     
 table tr td {
       border: 1px solid #000;
 	  border-left: 3px solid #7b68ee;
-      padding: 10px;
+      padding: 25px;
 	  text-align: center;
-	  width: 10%;
 	  font-size: smaller;
 }
     
 table tr:nth-child(odd) { 
 	background: #f4f4f4; 
 }
+
+
