--- a/Assignment3/style.css
+++ b/Assignment3/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -14,6 +16,12 @@ input {
 	margin: 1em;
 	padding: 1em;
 	display: block;
+}
+
+h1 {
+	font-family: "Press Start 2P";
+	font-size: 5rem;
+	text-shadow: 2px 2px gray;
 }
 
 img {
