--- a/Assignment3/style.css
+++ b/Assignment3/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	padding: 25px;
 }
 
 input {
@@ -9,7 +10,7 @@ input {
     border: none;
     height: 5px;
     font-size: 15px;
-    border-left: 3px solid #7b68ee;
+    border-left: 3px solid green;
     -webkit-box-shadow: 0px 5px 30px 0px rgba(5, 5, 5, 0.15);
     box-shadow: 0px 5px 30px 0px rgba(0, 0, 0, 0.418);
 	width: 200px;
@@ -21,7 +22,8 @@ input {
 h1 {
 	font-family: "Press Start 2P";
 	font-size: 5rem;
-	text-shadow: 2px 2px gray;
+	text-shadow: 3px 3px black;
+	color: green;
 }
 
 img {
@@ -72,6 +74,8 @@ img {
 
 p {
 	font-size: large;
+	text-transform: uppercase;
+	font-family: "Press Start 2P";
 }
 
 table { 
